--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <h2 id="genau"> Genauigkeit</h2>
     <script src="js/geoloc.js"></script>
 
+    <p id="dmeSupported"> Info über Device Motion</p>
+    <h1 id="xBeschl"> Daten x</h1>
+    <h1 id="yBeschl"> Daten y</h1>
+    <h1 id="zBeschl"> Daten z</h1>
+    <script src="devicemotion.js"></script>
+
+
 </body>
 
 </html>
