--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 id="xBeschl"> Daten x</h1>
     <h1 id="yBeschl"> Daten y</h1>
     <h1 id="zBeschl"> Daten z</h1>
-    <script src="devicemotion.js"></script>
+    <script src="js/devicemotion.js"></script>
 
 
 </body>
