--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container-fluid">
-        <h1>Entwicklungsaufgabe 1: "Gruppenmitglieder"</h1>
+        <h1 align="CENTER">Entwicklungsaufgabe 1: "Gruppenmitglieder"</h1>
         <p></p>
     </div>
 
@@ -24,7 +24,7 @@
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Mitglieder der Gruppe:</th>
-                                <th scope="col">Bilder der Teilnehmer:</th>
+                                <th class="text-center" scope="col">Bilder der Teilnehmer:</th>
                             </tr>
                         </thead>
                         <tbody>
