--- a/aufgabe_1.html
+++ b/aufgabe_1.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <title>Hello, world!</title>
-
 </head>
 
 <body>
@@ -38,22 +36,43 @@
         </div>
     </nav>
 
-
-
-
     <p></p>
 
     <div class="container-fluid">
-        <h3 align="CENTER">Software Engineering TH-Bingen</h3>
-        <h3 align="CENTER">Aufgaben der Gruppe Schneider & Hess</h3>
+        <h3 align="CENTER">Entwicklungsaufgabe 1: "Gruppenmitglieder"</h3>
         <p></p>
     </div>
 
-    <table width=100% border=0 cellspacing=0 cellpadding=0 style="table-layout: fixed;">
-        <tr>
-            <td align="CENTER"><img src="images/TH-Logo.svg" width=40%></td>
-        </tr>
-    </table>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md" style="background-color:lightgrey;">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Mitglieder der Gruppe:</th>
+                                <th class="text-center" scope="col">Bilder der Teilnehmer:</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Marc Schneider</td>
+                                <td align="CENTER"><img src="images/Profilbild_1_Marc_Schneider.jpg" width="100"></td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Steffen Hess</td>
+                                <td align="CENTER"><img src="images/Profilbild_2_Steffen_Hess.jpg" width="100"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
