--- a/aufgabe_3.html
+++ b/aufgabe_3.html
@@ -37,42 +37,11 @@
     </nav>
 
     <p></p>
+    <div id="googleMap" style="width:100%;height:400px;"></div>
 
-    <div class="container-fluid">
-        <h3 align="CENTER">Entwicklungsaufgabe 1: "Gruppenmitglieder"</h3>
-        <p></p>
-    </div>
+    <script src="js/mymap.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA84ZrNTtrdRZNl0E8l5PFlyDo59riRPCw&callback=myMap"></script>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md" style="background-color:lightgrey;">
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Mitglieder der Gruppe:</th>
-                                <th class="text-center" scope="col">Bilder der Teilnehmer:</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Marc Schneider</td>
-                                <td align="CENTER"><img src="images/Profilbild_1_Marc_Schneider.jpg" width="100"></td>
-                            </tr>
-
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Steffen Hess</td>
-                                <td align="CENTER"><img src="images/Profilbild_2_Steffen_Hess.jpg" width="100"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 </body>
