--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="navbar-nav">
 
                 <a class="nav-item nav-link" href="aufgabe_1.html">Aufgabe 1</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 2</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 3</a>
+                <a class="nav-item nav-link" href="aufgabe_2.html">Aufgabe 2</a>
+                <a class="nav-item nav-link" href="aufgabe_3.html">Aufgabe 3</a>
                 <a class="nav-item nav-link" href="#">Aufgabe 4</a>
                 <a class="nav-item nav-link" href="#">Aufgabe 5</a>
                 <a class="nav-item nav-link" href="#">Aufgabe 6</a>
