--- a/aufgabe_4.html
+++ b/aufgabe_4.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styleAufgabe4.css">
     <title>Hello, world!</title>
 </head>
 
@@ -36,6 +37,16 @@
         </div>
     </nav>
 
+    <p></p>
+
+    <div class="responsiveContainer">
+
+        <div id="googleMap" style="width:100%;height:400px;"></div>
+
+        <script src="js/mymap.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA84ZrNTtrdRZNl0E8l5PFlyDo59riRPCw&callback=myMap"></script>
+
+    </div>
 
 
 </body>
