--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -36,6 +36,12 @@
         </div>
     </nav>
 
+    <p></p>
+    <div id="googleMap" style="width:100%;height:400px;"></div>
+
+    <script src="js/mymap.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA84ZrNTtrdRZNl0E8l5PFlyDo59riRPCw&callback=myMap"></script>
+
 
 
 </body>
