--- a/aufgabe_6.html
+++ b/aufgabe_6.html
@@ -36,6 +36,10 @@
         </div>
     </nav>
 
+    <div class="container-fluid">
+        <h3 align="CENTER">Vorschläge für zukünftige Entwicklungsaufgaben</h3>
+    </div>
+
 
 </body>
 
