--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -29,15 +29,18 @@
                 <a class="nav-item nav-link" href="aufgabe_1.html">Aufgabe 1</a>
                 <a class="nav-item nav-link" href="aufgabe_2.html">Aufgabe 2</a>
                 <a class="nav-item nav-link" href="aufgabe_3.html">Aufgabe 3</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 4</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 5</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 6</a>
+                <a class="nav-item nav-link" href="aufgabe_4.html">Aufgabe 4</a>
+                <a class="nav-item nav-link" href="aufgabe_5.html">Aufgabe 5</a>
+                <a class="nav-item nav-link" href="aufgabe_6.html">Aufgabe 6</a>
             </div>
         </div>
     </nav>
 
     <p></p>
 
+    <div class="container-fluid">
+        <h3 align="CENTER">Rotationsgeschwindigkeit Ihres Mobilen Endgerätes</h3>
+    </div>
 </body>
 
 </html>
