--- a/aufgabe_1.html
+++ b/aufgabe_1.html
@@ -29,9 +29,9 @@
                 <a class="nav-item nav-link" href="aufgabe_1.html">Aufgabe 1</a>
                 <a class="nav-item nav-link" href="aufgabe_2.html">Aufgabe 2</a>
                 <a class="nav-item nav-link" href="aufgabe_3.html">Aufgabe 3</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 4</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 5</a>
-                <a class="nav-item nav-link" href="#">Aufgabe 6</a>
+                <a class="nav-item nav-link" href="aufgabe_4.html">Aufgabe 4</a>
+                <a class="nav-item nav-link" href="aufgabe_5.html">Aufgabe 5</a>
+                <a class="nav-item nav-link" href="aufgabe_6.html">Aufgabe 6</a>
             </div>
         </div>
     </nav>
