--- a/aufgabe_3.html
+++ b/aufgabe_3.html
@@ -35,8 +35,30 @@
             </div>
         </div>
     </nav>
+    <div class="container-fluid">
+        <p></p>
+        <div class="radio">
+            <label class="radio"> 
+        <input type="radio" name="optradio" onclick="alert('Gut gemacht, Radio 1!')">Drück mich, Radio 1!
+        </label>
+
+        </div>
+
+        <div class="radio">
+            <label class="radio">
+                <input type="radio" name="optradio" onclick="alert('Wirklich gut gemacht, Radio 2!')">Drück mich, Radio 2!
+                </label>
+        </div>
 
 
+
+        <div class="radio">
+            <label class="radio">
+                <input type="radio" name="optradio" onclick="alert('Ausgezeichnet, Radio 3!')">Drück mich, Radio 3!
+               </label>
+        </div>
+    </div>
+</body>
 
 </body>
 
