--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -41,6 +41,8 @@
     <div class="container-fluid">
         <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes</h3>
 
+        <p id="dmeSupported"> Info über Device Motion</p>
+
         <h1 id="xBeschl"> Daten x</h1>
         <h1 id="yBeschl"> Daten y</h1>
         <h1 id="zBeschl"> Daten z</h1>
