--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -39,6 +39,8 @@
     <p></p>
 
     <div class="container-fluid">
+
+
         <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes</h3>
 
         <p id="dmeSupported"> Info über Device Motion</p>
@@ -46,7 +48,7 @@
         <h1 id="xBeschl"> Daten x</h1>
         <h1 id="yBeschl"> Daten y</h1>
         <h1 id="zBeschl"> Daten z</h1>
-        <script src="devicemotion.js"></script>
+        <script src="js/devicemotion.js"></script>
 
         <h3 align="CENTER">Rotationsgeschwindigkeit Ihres Mobilen Endgerätes</h3>
 
