--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -52,6 +52,12 @@
 
         <h3 align="CENTER">Rotationsgeschwindigkeit Ihres Mobilen Endgerätes</h3>
 
+        <p id="doeSupported"> Info über Device Motion</p>
+
+        <h4 id="xRot"> Daten x1</h4>
+        <h4 id="yRot"> Daten y1</h4>
+        <h4 id="zRot"> Daten z1</h4>
+        <script src="js/deviceorientation.js"></script>
 
     </div>
 </body>
