--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -45,14 +45,14 @@
 
         <p id="dmeSupported"> Info über Device Motion</p>
 
-        <h4 id="xBeschl"> Daten x</h4>
+        <h4 id="xBeschl" + 'm/s2'> Daten x</h4>
         <h4 id="yBeschl"> Daten y</h4>
         <h4 id="zBeschl"> Daten z</h4>
         <script src="js/devicemotion.js"></script>
 
         <h3 align="CENTER">Rotationsgeschwindigkeit Ihres Mobilen Endgerätes</h3>
 
-        <p id="doeSupported"> Info über Device Motion</p>
+        <p id="doeSupported"> Info über Device Rotationsgeschwindigkeit</p>
 
         <h4 id="xRot"> Daten x1</h4>
         <h4 id="yRot"> Daten y1</h4>
