--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -54,12 +54,11 @@
 
         <p id="doeSupported"> Info über Device Rotationsgeschwindigkeit</p>
 
-        <h4 id="beta"> Daten x1</h4>
-        <h4 id="gamma"> Daten y1</h4>
-        <h4 id="alpha"> Daten z1</h4>
-        <script src="js/deviceorientation.js"></script>
+        <div id="dataContainerOrientation">
+            No device orientation data
+            <script src="js/deviceorientation.js"></script>
 
-    </div>
+        </div>
 </body>
 
 </html>
