--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -54,12 +54,14 @@
 
         <p id="doeSupported"> Info über Device Rotationsgeschwindigkeit</p>
 
+        <h1 id="xRotation"> Rotation x</h1>
+        <h1 id="yRotation"> Rotation y</h1>
+        <h1 id="zRotation"> Rotation z</h1>
 
-        <script src="js/deviceorientation.js"></script>
+        <script src="js/devicemotion1.js"></script>
 
-        <div id="dataContainerOrientation">
-            No device orientation data
-        </div>
+
+    </div>
 </body>
 
 </html>
