--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -41,9 +41,9 @@
     <div class="container-fluid">
 
 
-        <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes Test 2</h3>
+        <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes Test</h3>
 
-        <p id="dmeSupported"> Info über Device Motion</p>
+        <p id="dmeSupported"> Info über Device Motiongeschwindigkeit</p>
 
         <h4 id="xBeschl"> Daten x</h4>
         <h4 id="yBeschl"> Daten y</h4>
