--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -41,7 +41,7 @@
     <div class="container-fluid">
 
 
-        <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes Test</h3>
+        <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes Test 3</h3>
 
         <p id="dmeSupported"> Info über Device Motiongeschwindigkeit</p>
 
