--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -58,10 +58,12 @@
         <h4 id="yRotation"> Rotation y</h4>
         <h4 id="zRotation"> Rotation z</h4>
 
-        <script src="js/devicemotion1.js"></script>
-
+        <img src="images/axes.png" width="200">
 
     </div>
+
+
+
 </body>
 
 </html>
