--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -40,19 +40,17 @@
 
     <div class="container-fluid">
 
+        <p id="dmeSupported"> Info über Device Motiongeschwindigkeit</p>
 
         <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes</h3>
-
-        <p id="dmeSupported"> Info über Device Motiongeschwindigkeit</p>
 
         <h4 id="xBeschl"> Daten x</h4>
         <h4 id="yBeschl"> Daten y</h4>
         <h4 id="zBeschl"> Daten z</h4>
         <script src="js/devicemotion.js"></script>
+        <p></p>
+        <h3 align="CENTER">Rotations-Daten Ihres Mobilen Endgerätes</h3>
 
-        <h3 align="CENTER">Rotationsgeschwindigkeit Ihres Mobilen Endgerätes</h3>
-
-        <p id="doeSupported"> Info über Device Rotationsgeschwindigkeit</p>
 
         <h4 id="xRotation"> Rotation x</h4>
         <h4 id="yRotation"> Rotation y</h4>
