--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <title>Hello, world!</title>
+
 </head>
 
 <body>
@@ -49,7 +50,7 @@
         <h4 id="zBeschl"> Daten z</h4>
         <p></p>
 
-        <h3 align="CENTER">Rotations-Daten Ihres Mobilen Endgerätes Test 1</h3>
+        <h3 align="CENTER">Rotations-Daten Ihres Mobilen Endgerätes</h3>
 
 
         <h4 id="xRotation"> Rotation x</h4>
@@ -57,9 +58,9 @@
         <h4 id="zRotation"> Rotation z</h4>
 
         <script src="js/devicemotion.js"></script>
-
-        <img src="images/axes.png" width="200">
-
+        <p>
+            <img src="images/axes.png" width="200">
+        </p>
     </div>
 
 
