--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -58,9 +58,9 @@
         <h4 id="zRotation"> Rotation z</h4>
 
         <script src="js/devicemotion.js"></script>
-        <p>
-            <img src="images/axes.png" width="200">
-        </p>
+
+        <h3 align="CENTER"><img src="images/axes.png" width="300"></h3>
+
     </div>
 
 
