--- a/aufgabe_1.html
+++ b/aufgabe_1.html
@@ -32,6 +32,7 @@
                 <a class="nav-item nav-link" href="aufgabe_4.html">Aufgabe 4</a>
                 <a class="nav-item nav-link" href="aufgabe_5.html">Aufgabe 5</a>
                 <a class="nav-item nav-link" href="aufgabe_6.html">Aufgabe 6</a>
+                <a class="nav-item nav-link" href="ladesaeuleIndex.html">Projekt Ladesäule</a>
             </div>
         </div>
     </nav>
