--- a/aufgabe_4.html
+++ b/aufgabe_4.html
@@ -33,6 +33,7 @@
                 <a class="nav-item nav-link" href="aufgabe_4.html">Aufgabe 4</a>
                 <a class="nav-item nav-link" href="aufgabe_5.html">Aufgabe 5</a>
                 <a class="nav-item nav-link" href="aufgabe_6.html">Aufgabe 6</a>
+                <a class="nav-item nav-link" href="ladesaeuleIndex.html">Projekt Ladesäule</a>
             </div>
         </div>
     </nav>
@@ -40,7 +41,8 @@
     <p></p>
 
     <div class="responsiveContainer">
-
+        <h3 align="CENTER">Entwicklungsaufgabe 4: "Google-Maps"</h3>
+        <p></p>
         <div id="googleMap" style="width:100%;height:400px;"></div>
 
         <script src="js/mymap.js"></script>
