--- a/aufgabe_5.html
+++ b/aufgabe_5.html
@@ -32,6 +32,7 @@
                 <a class="nav-item nav-link" href="aufgabe_4.html">Aufgabe 4</a>
                 <a class="nav-item nav-link" href="aufgabe_5.html">Aufgabe 5</a>
                 <a class="nav-item nav-link" href="aufgabe_6.html">Aufgabe 6</a>
+                <a class="nav-item nav-link" href="ladesaeuleIndex.html">Projekt Ladesäule</a>
             </div>
         </div>
     </nav>
@@ -39,7 +40,8 @@
     <p></p>
 
     <div class="container-fluid">
-
+        <h3 align="CENTER">Entwicklungsaufgabe 4: "Sensor-Daten abfragen"</h3>
+        <p></p>
         <p id="dmeSupported"> Info über Device Motiongeschwindigkeit</p>
 
         <h3 align="CENTER">Beschleunigung Ihres Mobilen Endgerätes</h3>
