--- a/aufgabe_1.html
+++ b/aufgabe_1.html
@@ -40,7 +40,7 @@
     <p></p>
 
     <div class="container-fluid">
-        <h3 align="CENTER">Entwicklungsaufgabe 1: "Gruppenmitglieder"</h3>
+        <h3 align="CENTER">Vorschläge für drei konkrete zukünftige Entwicklungsaufgaben</h3>
         <p></p>
     </div>
 
@@ -52,21 +52,35 @@
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Mitglieder der Gruppe:</th>
-                                <th class="text-center" scope="col">Bilder der Teilnehmer:</th>
+                                <th scope="col">Vorschläge für zukünftige Entwicklungsaufgaben:</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td>Marc Schneider</td>
-                                <td align="CENTER"><img src="images/Profilbild_1_Marc_Schneider.jpg" width="100"></td>
+                                <td>Konzeption eines Projektmanagements-Tools, das aufgrund von Datumsangaben und zugehörigen Beschreibungen ein Gant-Diagramm erstellt. Weiterhin soll die Möglichkeit bestehen, Erinnerungsmails an betroffene Personen zu verschicken,
+                                    für die Daten aus dem Gant-Diagramm relevant sind. Diese Aufgabe könnte aufgrund ihres Umfangs in Teilaufgaben unterteilt werden. </td>
                             </tr>
 
                             <tr>
                                 <th scope="row">2</th>
-                                <td>Steffen Hess</td>
-                                <td align="CENTER"><img src="images/Profilbild_2_Steffen_Hess.jpg" width="100"></td>
+                                <td>Eine Seite mit Google Maps Karte programmieren, die zufällige Standorte anzeigt. Mittels Zufallszahlengenerator die Koordinaten erstellen lassen. Startknopf für neue Koordinaten generieren.</td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Slideshow mittels Javascript oder jQuery erstellen, bei der ein gewisse Auswahl an Bilder durchlaufen wird, welche sich bspw. alle 3 Sekunden ändern.
+                                    <a href="https://www.mediaevent.de/javascript/simple-lightbox.html">Beispiel</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">4</th>
+                                <td>Einen „einfachen“ Taschenrechner programmieren, der die Grundrechenarten beherrscht. Unter dem Taschenrechner könnten Aufgaben gestellt werden, die mit einer Input-Form beantwortet werden können. Sind die Aufgaben richtig
+                                    gelöst, öffnet sich eine Push-Nachricht, welche den User zu dem richtigen Ergebnis beglückwünscht.</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">5</th>
+                                <td>letzter Vorschlag</td>
                             </tr>
                         </tbody>
                     </table>
