--- a/aufgabe_2.html
+++ b/aufgabe_2.html
@@ -56,7 +56,7 @@
                         <tbody>
                             <tr>
                                 <script>
-                                    var i, Zahl, j, Auto, k, Bilder, link;
+                                    var i, Zahl, Auto, Bilder, link;
                                     Zahl = ["1", "2", "3"]
                                     Auto = ["BMW 340i", "Tesla Model S", "Mercedes G-Klasse"];
                                     Bilder = ["images/Bmw340i.jpg", "images/TeslaModelS.jpg", "images/MercedesGKlasse.jpg"];
