--- a/ladesaeuleIndex.html
+++ b/ladesaeuleIndex.html
@@ -38,7 +38,35 @@
     <div class="container-fluid">
         <h3 align="CENTER">Vorstellung "Projekt Ladesäule"</h3>
     </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md" style="background-color:lightgrey;">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Auswahl:</th>
+                                <th class="text-center" scope="col">Bilder der Teilnehmer:</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Marc Schneider</td>
+                                <td align="CENTER"><img src="images/Profilbild_1_Marc_Schneider.jpg" width="100"></td>
+                            </tr>
 
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Steffen Hess</td>
+                                <td align="CENTER"><img src="images/Profilbild_2_Steffen_Hess.jpg" width="100"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
 </body>
 
