--- a/aufgabe_1.html
+++ b/aufgabe_1.html
@@ -40,7 +40,7 @@
     <p></p>
 
     <div class="container-fluid">
-        <h3 align="CENTER">Vorschläge für drei konkrete zukünftige Entwicklungsaufgaben</h3>
+        <h3 align="CENTER">Entwicklungsaufgabe 1: "Javascript-Funktion"</h3>
         <p></p>
     </div>
 
