--- a/aufgabe_4.html
+++ b/aufgabe_4.html
@@ -18,7 +18,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="images/TH-Logo.svg" width="60" height="60" class="d-inline-block align-top" alt=""> </a>
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
 
     <p></p>
 
-    <div class="responsiveContainer">
+    <div class="container-fluid">
         <h3 align="CENTER">Entwicklungsaufgabe 4: "Google-Maps"</h3>
         <p></p>
         <div id="googleMap" style="width:100%;height:400px;"></div>
