--- a/aufgabe_6.html
+++ b/aufgabe_6.html
@@ -17,7 +17,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="images/TH-Logo.svg" width="60" height="60" class="d-inline-block align-top" alt=""> </a>
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,13 +54,13 @@
                         <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td>Konzeption eines Projektmanagements-Tools, das aufgrund von Datumsangaben und zugehörigen Beschreibungen ein Gant-Diagramm erstellt. Weiterhin soll die Möglichkeit bestehen, Erinnerungsmails an betroffene Personen zu verschicken,
-                                    für die Daten aus dem Gant-Diagramm relevant sind. Diese Aufgabe könnte aufgrund ihres Umfangs in Teilaufgaben unterteilt werden. </td>
+                                <td>Konzeption eines Projektmanagement-Tools, das aufgrund von Datumsangaben und zugehörigen Beschreibungen ein Gantt-Diagramm erstellt. Weiterhin soll die Möglichkeit bestehen, Erinnerungsmails an betroffene Personen zu verschicken,
+                                    mit den Daten aus dem Gantt-Diagramm. Diese Aufgabe könnte aufgrund ihres Umfangs in Teilaufgaben unterteilt werden. </td>
                             </tr>
 
                             <tr>
                                 <th scope="row">2</th>
-                                <td>Eine Seite mit Google Maps Karte programmieren, die zufällige Standorte anzeigt. Mittels Zufallszahlengenerator die Koordinaten erstellen lassen. Startknopf für neue Koordinaten generieren.</td>
+                                <td>Eine Seite mit Google-Maps Karte programmieren, die zufällige Standorte anzeigt. Mittels Zufallszahlengenerator die Koordinaten erstellen lassen. Startknopf für neue Koordinaten generieren.</td>
                             </tr>
 
                             <tr>
@@ -75,12 +75,6 @@
                                 <td>Einen „einfachen“ Taschenrechner programmieren, der die Grundrechenarten beherrscht. Unter dem Taschenrechner könnten Aufgaben gestellt werden, die mit einer Input-Form beantwortet werden können. Sind die Aufgaben richtig
                                     gelöst, öffnet sich eine Push-Nachricht, welche den User zu dem richtigen Ergebnis beglückwünscht.</td>
                             </tr>
-
-                            <tr>
-                                <th scope="row">5</th>
-                                <td>letzter Vorschlag</td>
-                            </tr>
-
                         </tbody>
                     </table>
                 </div>
