--- a/ladesaeule.1.html
+++ b/ladesaeule.1.html
@@ -17,19 +17,19 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="images/TH-Logo.svg" width="60" height="60" class="d-inline-block align-top" alt=""> </a>
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="ladesaeuleIndex.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
 
-                <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule reservieren</a>
-                <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang bezahlen</a>
-                <a class="nav-item nav-link" href="ladesaeule.3.html">Karte</a>
-                <a class="nav-item nav-link" href="ladesaeule.4.html">Reserve</a>
+                <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule finden</a>
+                <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang</a>
+                <a class="nav-item nav-link" href="ladesaeule.3.html">Historie</a>
+                <a class="nav-item nav-link" href="ladesaeule.4.0.html">Userverwaltung</a>
 
             </div>
         </div>
