--- a/ladesaeuleIndex.html
+++ b/ladesaeuleIndex.html
@@ -17,51 +17,64 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <img src="images/TH-Logo.svg" width="60" height="60" class="d-inline-block align-top" alt=""> </a>
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="index.html">
+            <img src="images/TH-Logo.svg" width="60" height="60" class="d-inline-block align-top" alt=""></a>
+        <a class="navbar-brand" href="ladesaeuleIndex.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
 
-                <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule reservieren</a>
-                <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang bezahlen</a>
-                <a class="nav-item nav-link" href="ladesaeule.3.html">Karte</a>
-                <a class="nav-item nav-link" href="ladesaeule.4.html">Reserve</a>
+                <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule finden</a>
+                <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang</a>
+                <a class="nav-item nav-link" href="ladesaeule.3.html">Historie</a>
+                <a class="nav-item nav-link" href="ladesaeule.4.html">Userverwaltung</a>
 
             </div>
         </div>
     </nav>
 
     <div class="container-fluid">
-        <h3 align="CENTER">Vorstellung "Projekt Ladesäule"</h3>
+        <h3 align="CENTER">"Projekt Ladesäule"</h3>
     </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md" style="background-color:lightgrey;">
                 <div class="table-responsive">
                     <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Auswahl:</th>
-                                <th class="text-center" scope="col">Bilder der Teilnehmer:</th>
-                            </tr>
-                        </thead>
+
                         <tbody>
                             <tr>
-                                <th scope="row">1</th>
-                                <td>Marc Schneider</td>
-                                <td align="CENTER"><img src="images/Profilbild_1_Marc_Schneider.jpg" width="100"></td>
+                                <td align="CENTER">
+                                    <a class="zeile_n" href="ladesaeule.1.html">
+                                        <font color="black">
+                                            <h4>Ladesäule finden</h4>
+                                            <img src="images/maps.bsw.png" width="250"></td>
+                            </tr>
+                            <tr>
+                                <td align="CENTER">
+                                    <a class="zeile_n" href="ladesaeule.2.html">
+                                        <font color="black">
+                                            <h4>Ladevorgang</h4>
+                                            <img src="images/Battery-Charged.png" width="100"></td>
+                            </tr>
+                            <tr>
+                                <td align="CENTER">
+                                    <a class="zeile_n" href="ladesaeule.3.html">
+                                        <font color="black">
+                                            <h4>Historie</h4>
+                                            <img src="images/zwischenablage.png" width="100"></td>
+                            </tr>
+                            <tr>
+                                <td align="CENTER">
+                                    <a class="zeile_n" href="ladesaeule.4.html">
+                                        <font color="black">
+                                            <h4>Userverwaltung</h4>
+                                            <img src="images/Uservw.png" width="100"></td>
                             </tr>
 
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Steffen Hess</td>
-                                <td align="CENTER"><img src="images/Profilbild_2_Steffen_Hess.jpg" width="100"></td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
