--- a/ladesaeule.3.html
+++ b/ladesaeule.3.html
@@ -17,29 +17,78 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="images/TH-Logo.svg" width="60" height="60" class="d-inline-block align-top" alt=""> </a>
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="ladesaeuleIndex.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
 
-                <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule reservieren</a>
-                <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang bezahlen</a>
-                <a class="nav-item nav-link" href="ladesaeule.3.html">Karte</a>
-                <a class="nav-item nav-link" href="ladesaeule.4.html">Reserve</a>
+                <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule finden</a>
+                <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang</a>
+                <a class="nav-item nav-link" href="ladesaeule.3.html">Historie</a>
+                <a class="nav-item nav-link" href="ladesaeule.4.0.html">Userverwaltung</a>
 
             </div>
         </div>
     </nav>
 
     <div class="container-fluid">
-        <h3 align="CENTER">Karte</h3>
+        <h3 align="CENTER">Histroie</h3>
     </div>
 
+    <div class="container">
+        <h2>Übersicht bisher durchgeführter Ladevorgänge:</h2>
+        <p>Suchen Sie nach Fahrer, Datum oder Ladesäule:</p>
+        <input class="form-control" id="myInput" type="text" placeholder="Search..">
+        <br>
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>Fahrer</th>
+                    <th>Datum</th>
+                    <th>Ladesäule</th>
+                </tr>
+            </thead>
+            <tbody id="myTable">
+                <tr>
+                    <td>Marc Schneider</td>
+                    <td>02.07.2018</td>
+                    <td>Hindenburganlage 2, 55411 Bingen am Rhein</td>
+                </tr>
+                <tr>
+                    <td>Steffen Hess</td>
+                    <td>05.07.2018</td>
+                    <td>Rheinkai 21, 55411 Bingen am Rhein</td>
+                </tr>
+                <tr>
+                    <td>Frank Mehler</td>
+                    <td>12.07.2018</td>
+                    <td>Berlinstraße 109, 55411 Bingen am Rhein</td>
+                </tr>
+                <tr>
+                    <td>Stefan Jost</td>
+                    <td>16.07.2018</td>
+                    <td>Museumstraße 3, 55411 Bingen am Rhein</td>
+                </tr>
+            </tbody>
+        </table>
 
+        <p>Note that we start the search in tbody, to prevent filtering the table headers.</p>
+    </div>
+
+    <script>
+        $(document).ready(function() {
+            $("#myInput").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#myTable tr").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
